--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -1,8 +1,8 @@
 <link rel="stylesheet" href="pages/login/login.css" />
 
 <div id="main">
-  <div>欢迎来到美食广场</div>
-  <div id="area">
+  <div class="animate__animated animate__backInUp">欢迎来到美食广场</div>
+  <div id="area" class="animate__animated animate__backInUp">
     <div>
       <span>账号密码登录</span>
     </div>
