--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="./pages/register/register.css" />
-<div id="main">
+<div id="main" class="animate__animated animate__zoomIn">
   <h3>账号注册</h3>
 
   <div>
